--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* body {
+    font-family: 'Inter', sans-serif;
+    background-color: #f9fafb;
+    color: #4b5563;
+  }
+  
+  input, textarea {
+    border: 1px solid #e5e7eb;
+    transition: all 0.3s;
+  }
+  
+  input:focus, textarea:focus {
+    border-color: #3b82f6;
+    box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.25);
+  } */
